--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,7 +253,7 @@ body {
   justify-content: center;
   /* align-items: center; */
   flex-direction: column;
-  padding-left: 10rem;
+  padding-left: 7rem;
 }
 
 .header__img {
@@ -318,11 +318,6 @@ body {
   background-color: transparent;
 }
 
-.btn-main,
-.navigation__signup {
-  box-shadow: 0 4px 14px 0;
-}
-
 .maker {
   font-size: 2rem;
   font-weight: 400;
@@ -354,7 +349,7 @@ body {
   width: 16.66%;
   /* text-align: center; */
   margin-top: 0.5rem;
-  padding: 1rem 3rem;
+  padding: 0.8rem 3rem;
   display: inline-block;
 }
 
@@ -716,6 +711,7 @@ body {
 }
 
 .list__podcast-heading {
+  /* background-color: pink; */
   font-size: 4rem;
   margin-bottom: 1rem;
   display: flex;
@@ -723,12 +719,20 @@ body {
 }
 
 .list__podcast-title {
+  /* background-color: skyblue; */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 500;
   font-size: 2rem;
-  margin-bottom: 3rem;
-  font-weight: 600;
+  margin-bottom: 2.5rem;
+  word-break: break-word;
 }
 
 .list__podcast > audio {
+  background-color: lightgoldenrodyellow;
   width: 100%;
 }
 
@@ -1000,6 +1004,11 @@ body {
 
   .sidenav__item {
     width: auto;
+    padding: 0.5rem 3rem;
+  }
+
+  .sidenav__link {
+    font-size: 1.7rem;
   }
 
   .add,
@@ -1009,7 +1018,7 @@ body {
   }
 
   .list__podcast {
-    top: -7rem;
+    top: -8rem;
   }
 
   .list__podcast-title {
@@ -1022,7 +1031,7 @@ body {
   }
 }
 
-/*Tab Port*/
+/*iPad Port*/
 @media only screen and (min-device-width: 48em) and (max-device-width: 64em) and (orientation: portrait) {
   html {
     font-size: 75%; /*1rem = 12px*/
@@ -1037,9 +1046,8 @@ body {
   }
 }
 
-/*iPad Pro Portrait and iPad Landscape*/
-@media only screen and (min-device-width: 64em) and (max-device-width: 85.375em) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait),
-  only screen and (min-device-width: 64em) and (max-device-height: 48em) and (orientation: landscape) {
+/*iPad Pro Portrait */
+@media only screen and (min-device-width: 64em) and (max-device-width: 85.375em) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   html {
     font-size: 75%; /*1rem = 12px*/
   }
@@ -1055,7 +1063,6 @@ body {
   }
 
   .header__btns {
-    /* background-color: pink; */
     width: 60%;
     display: flex;
     justify-content: center;
@@ -1065,6 +1072,35 @@ body {
   .category-feed,
   .list {
     width: 100%;
+  }
+}
+
+/* iPad Landscape */
+@media only screen and (min-device-width: 64em) and (max-device-height: 48em) and (orientation: landscape) {
+  html {
+    font-size: 75%; /*1rem = 12px*/
+  }
+
+  .header__img {
+    display: none;
+  }
+
+  .header__text-box {
+    text-align: center;
+    align-items: center;
+    padding-left: 0;
+  }
+
+  .header__btns {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .add,
+  .category-feed,
+  .list {
+    width: 80%;
   }
 }
 
